--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
         <section id="products" class="container">
             <h2>Products</h2>
-            <div class="product-grid">
+            <div class="product-container">
                 <div class="product-card" data-id="1">
                     <img src="./assets/shopping.webp" alt="Product 1">
                     <h3>Product 1</h3>
@@ -38,7 +38,7 @@
                     <button class="add-to-cart">Add to Cart</button>
                 </div>
                 <div class="product-card" data-id="3">
-                    <img src="./assets/sneakers.avif" alt="Product 2">
+                    <img src="./assets/sneakers.avif" alt="Product 3">
                     <h3>Product 3</h3>
                     <p>R30.00</p>
                     <button class="add-to-cart">Add to Cart</button>
